Replace image file naming scheme with a random UUID naming scheme to prevent name overlap bugs. Format homepage 'fun fact' to reduce max width.

--- a/src/components/home/home.module.css
+++ b/src/components/home/home.module.css
@@ -3,6 +3,8 @@
     flex-direction: column;
     align-items: center;
     gap: 24px;
+    max-width: 70ch;
+    line-height: 1.5;
 }
 
 .fun_fact > *:first-child {
